// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AutoGrid > 支持手动传入组件宽度, 会使用传入宽度进行宽度计算每列子元素个数 1`] = `
"<div style="width: 400px; display: grid; grid-template-columns: repeat(2, 1fr); column-gap: 0px; row-gap: 0px;">
  <div style="overflow: hidden;">
    <div>item-1</div>
  </div>
  <div style="overflow: hidden;">
    <div>item-2</div>
  </div>
</div>"
`;

exports[`AutoGrid > 设置横向间距 ( 样式测试 ) 1`] = `
"<div style="width: 100%; display: grid; grid-template-columns: repeat(1, 1fr); column-gap: 2px; row-gap: 0px;">
  <div style="overflow: hidden;">
    <div>item-1</div>
  </div>
  <div style="overflow: hidden;">
    <div>item-2</div>
  </div>
</div>"
`;

exports[`AutoGrid > 设置横向间距 ( 样式测试 ) 2`] = `
"<div style="width: 100%; display: grid; grid-template-columns: repeat(1, 1fr); column-gap: 2px; row-gap: 6px;">
  <div style="overflow: hidden;">
    <div>item-1</div>
  </div>
  <div style="overflow: hidden;">
    <div>item-2</div>
  </div>
</div>"
`;

exports[`AutoGrid > 设置横纵间距 ( 样式测试 ) 1`] = `
"<div style="width: 100%; display: grid; grid-template-columns: repeat(1, 1fr); column-gap: 2px; row-gap: 2px;">
  <div style="overflow: hidden;">
    <div>item-1</div>
  </div>
  <div style="overflow: hidden;">
    <div>item-2</div>
  </div>
</div>"
`;

exports[`AutoGrid > 设置横纵间距 ( 样式测试 ) 2`] = `
"<div style="width: 100%; display: grid; grid-template-columns: repeat(1, 1fr); column-gap: 2px; row-gap: 4px;">
  <div style="overflow: hidden;">
    <div>item-1</div>
  </div>
  <div style="overflow: hidden;">
    <div>item-2</div>
  </div>
</div>"
`;

exports[`AutoGrid > 设置纵向间距 ( 样式测试 ) 1`] = `
"<div style="width: 100%; display: grid; grid-template-columns: repeat(0, 1fr); column-gap: 0px; row-gap: 2px;">
  <div style="overflow: hidden;">
    <div>item-1</div>
  </div>
  <div style="overflow: hidden;">
    <div>item-2</div>
  </div>
</div>"
`;

exports[`AutoGrid > 设置纵向间距 ( 样式测试 ) 2`] = `
"<div style="width: 100%; display: grid; grid-template-columns: repeat(1, 1fr); column-gap: 6px; row-gap: 2px;">
  <div style="overflow: hidden;">
    <div>item-1</div>
  </div>
  <div style="overflow: hidden;">
    <div>item-2</div>
  </div>
</div>"
`;
